# AI-Engineer-Bootcamp

Lecture 08/: embedding.ipynb
Lecture 11/: RAG.ipynb  RAG_DEMO.ipynb  paul_graham_essay.txt
Lecture 12/: .env  chat_interface.py  input_output.py  interfce_with_rag.py  pdf_parsing.ipynb
Lecture 15/: RAG_cache.ipynb
Lecture 15/cache/BAAI/: bge-small-en-v1.50055742e-2313-55f5-890c-e6664ca7cc9f  bge-small-en-v1.501e86191-6017-5d38-b625-4cf95e05bef9  bge-small-en-v1.502897a9d-baf1-566e-8eb0-aaacda81d2a4  bge-small-en-v1.506679e1b-c6ca-5a7e-aacf-a4bf6670c709  (+80 more)
Lecture 23/: vector_store.py
Lecture 24/: ai_agent.ipynb
Lecture 27/: adaptive_rag.ipynb
Lecture 27/rag_app/: .env  Dockerfile  docker-compose.yml  langgraph_flow.py  main.py  requirements.txt  start-ollama.sh
Lecture 28/linkedinai/: README.md  pyproject.toml  report.md
Lecture 28/linkedinai/src/linkedinai/: crew.py  main.py
Lecture 28/linkedinai/src/linkedinai/config/: agents.yaml  tasks.yaml
Lecture 28/linkedinai/src/linkedinai/tools/: custom_tool.py
Lecture 31/: autogen.ipynb  crewai.ipynb  marketing_report.md  venue_details.json
Lecture 32/: .env.example  hierarchical_agent_teams.ipynb  multi-agent-collaboration.ipynb  requirements.txt
Lecture 35/: .gitignore  knowledge_graph.json  ragas_eval.ipynb  ragas_sythetic_dataset.ipynb  requirements.txt
Lecture 39-40/: localrag.py  requirements.txt  training_stsbenchmark-crossencoder.ipynb  training_stsbenchmark.ipynb
Lecture 43/: lora.ipynb  qlora.ipynb  quantization.ipynb
nb/: Llama3.1_(8B)-GRPO.ipynb
